--- a/index.html
+++ b/index.html
@@ -117,30 +117,31 @@
     <section>
         <h2>Contacto</h2>
 
-        <form class="formulario" action="">
+        <form class="formulario">
             <fieldset>
                 <legend>Contactame llenando todos los campos</legend>
 
                 <div class="contenedor-campos">
                     <div class="campo">
                         <label>Nombre</label>
-                        <input type="text" placeholder="Nombre">
+                        <input class="input-text" type="text" placeholder="Nombre">
                     </div>
                     <div class="campo">
                         <label>Telefono</label>
-                        <input type="tel" placeholder="Tu teléfono">    
+                        <input class="input-text" type="tel" placeholder="Tu teléfono">    
                     </div>
                     <div class="campo">
                         <label>Correo</label>
-                        <input type="email" placeholder="Mail">
+                        <input class="input-text" type="email" placeholder="Mail">
                     </div>
                     <div class="campo">
                         <label>Mensaje</label>
-                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                        <textarea class="input-text"></textarea>
                     </div>
                 </div>
-                <div>
-                    <input class="boton" type="submit" value="Enviar">
+
+                <div class="alinear-derecha flex">
+                    <input class="boton w-sm-100" type="submit" value="Enviar">
                 </div>
             </fieldset>
         </form>
@@ -148,7 +149,7 @@
     
     </main>
 
-    <footer>
+    <footer class="footer">
         <p>Todos los derechos reservados Jesus Gerardo Robles Cuellar</p>
     </footer>
     
