Fixed bugs and finish project

--- a/nosotros.html
+++ b/nosotros.html
@@ -8,6 +8,10 @@
 </head>
 <body>
    <h1> Sobre Nosotros</h1>
-    
+    <h2>
+    <a name="" id="" class="btn btn-primary" href="/index.html" role="button">
+        Regresar
+    </a>
+    </h2>
 </body>
 </html>
