--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="nav-bg">
         <nav class="navegacion-principal contenedor">
             <a href="#">Inicio</a>
-            <a href="#">Sobre mi</a>
+            <a href="/nosotros.html">Sobre mi</a>
             <a href="#">Clientes</a>
             <a href="#">Contacto</a>
         </nav>
